# Experiment2025

./: .gitignore  .gitmodules  AbsoluteInstrument.cpp  AbsoluteInstrument.h  CMakeLists.txt  ColorDialogItemDelegate.cpp  ColorDialogItemDelegate.h  CombinedInstrument.cpp  CombinedInstrument.h  ComboItemDelegate.cpp  ComboItemDelegate.h  Experiment.cpp  Experiment.h  Experiment_local.h  Instrument.cpp  Instrument.h  InstrumentsModel.cpp  InstrumentsModel.h  LICENSE  README.md  RelativeInstrument.cpp  RelativeInstrument.h  TableModel.cpp  TableModel.h  Variable.cpp  Variable.h  Variable_local.cpp  Variable_local.h  basesettingswidget.cpp  basesettingswidget.h  csvdatareader.cpp  csvdatareader.h  electricChain.csv  errors_tools.json  heatmapsettingswidget.cpp  heatmapsettingswidget.h  heatmapsettingswidget.ui  histogramsettingswidget.cpp  histogramsettingswidget.h  histogramsettingswidget.ui  (+20 more)
.dist/: data.csv
